# dropbox_link_generate

./: .gitignore  AGENTS.md  README.md  check_permissions.py  data  project_settings.yaml  pyproject.toml  test_diagnosis.py
docs/: PLAN.md  REQUIRES.md  SUMMARY.md  TASKS.md  diagnosis_report.md  dropbox_link_generate.md  error_handling_fix.patch
docs/guides/: SECURITY.md
src/dropbox_link_generate/: __init__.py  cli.py  version.py
src/dropbox_link_generate/core/: __init__.py  sharing.py
src/dropbox_link_generate/diagnostics/: __init__.py  common.py  permissions.py  suite.py
src/dropbox_link_generate/plugins/: __init__.py
src/dropbox_link_generate/services/: dropbox_client.py  dropbox_client_improved.py
src/dropbox_link_generate/utils/: clipboard.py  config.py  errors.py  logging.py  paths.py  structure.py
tests/: test_cli.py  test_client_url.py  test_config.py  test_paths.py
